--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,1 @@
-{"projectId":"prj_KRS5Il7Z6AzmtVsnqmiOveCHxIFM","orgId":"team_f4YAPNKyj6FOTQpxNmQFNyIs","projectName":"a-service"}
+{"projectId":"prj_B8VZzmqip2lLXn6htxBRibflTbLG","orgId":"team_p5UhIkC7cJU1fyNsIHgjjLOr","projectName":"a-service-test"}
