feat:新增sso上传资源

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
   "version": 2,
   "rewrites": [
-    { "source": "/api/pyxo/:table/:action", "destination": "/api/pyxo" }
+    { "source": "/api/pyxo/:table/:action", "destination": "/api/pyxo" },
+    { "source": "/upload", "destination": "/api/upload" }
   ]
 }
