--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,7 @@
   "version": 2,
   "rewrites": [
     { "source": "/api/pyxo/:table/:action", "destination": "/api/pyxo" },
-    { "source": "/upload", "destination": "/api/upload" }
+    { "source": "/upload", "destination": "/api/upload" },
+    { "source": "/test", "destination": "/api/test" }
   ]
 }
