--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "version": 2,
   "rewrites": [
-    { "source": "/api/pyxo/:table/:action", "destination": "/api/pyxo" },
-    { "source": "/upload", "destination": "/api/upload" },
-    { "source": "/hello", "destination": "/api/hello" }
+    { "source": "/api/pyxo/:table/:action", "destination": "/api/pyxo/index" },
+    { "source": "/upload", "destination": "/api/upload/index" },
+    { "source": "/hello", "destination": "/api/hello/index" }
   ]
 }
