feat:调整优化文件操作,可上传/删除文件

--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "rewrites": [
     { "source": "/api/pyxo/:table/:action", "destination": "/api/pyxo/index" },
-    { "source": "/upload", "destination": "/api/upload/index" },
+    { "source": "/api/file/:action", "destination": "/api/file/index" },
     { "source": "/hello", "destination": "/api/hello/index" }
   ]
 }
