feat:修改文件名为统一化

--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "version": 2,
   "rewrites": [
-    { "source": "/api/pyxo/:table/:action", "destination": "/api/pyxo/index" },
+    { "source": "/api/pyxo/:table/:action", "destination": "/api/db/index" },
     { "source": "/api/file/:action", "destination": "/api/file/index" },
     { "source": "/hello", "destination": "/api/hello/index" }
   ]
